--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="window.open('./assets/Mathematical Modeling Project 2.pdf')"
+                onclick="window.open('./assets/Mathematical Modeling Project 2-compressed.pdf')"
               >
                 Report
               </button>
