--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
               I moved to the United States from Australia at the age of 18 to pursue a lifelong dream of combining my footballing abilities & commitment to excellence in the classroom.
               Initially I began with general studies at Eastern Florida State College for one semester. However, driven by a desire to further explore my academic interests, I sought out new opportunities at Seton Hill University.
               I have been able to dive deep into the intersection of mathematics, computer science through their Data Science major alongside the seemingly unlimited resources for self-learning.
-              My childhood fascination with maths, computers and space exploration continues to drive my ambition to make an empowering contribution to the fields of data science and space exploration.
+              My childhood fascination with maths, computers and space exploration continues to drive my ambition to make meaningful contribution to these fields, empowering others through innovation and discovery.
             </p>
           </div>
         </div>
