--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p><br />Research Project 'Automotive Maryland Car Sales' under guidance from Dean of School of Business & Technology, Dr Jared Burns</p>
+              <p><br />Research Project 'Comprehensive Analysis of Maryland Automotive Industry' under guidance from Dean of School of Business & Technology, Dr Jared Burns</p>
             </div>
             <div class="details-container">
               <img
@@ -272,7 +272,7 @@
             <p>&nbsp;&nbsp;&nbsp;&nbsp;</p>
 
 
-            <h2 class="experience-sub-title project-title">Maryland Automotive Industry</h2>
+            <h2 class="experience-sub-title project-title">Comprehensive Analysis of Maryland Automotive Industry</h2>
             <p>&nbsp;&nbsp;&nbsp;&nbsp;</p>
 
             <div class="btn-container">
