--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p><br />Research Project 'Comprehensive Analysis of Maryland Automotive Industry' under guidance from Dean of School of Business & Technology, Dr Jared Burns</p>
+              <p><br />Research Project Comprehensive Analysis of Maryland Automotive Industry under guidance from Dean of School of Business & Technology, Dr Jared Burns</p>
             </div>
             <div class="details-container">
               <img
