--- a/index.html
+++ b/index.html
@@ -88,7 +88,11 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p><br />Research Project Comprehensive Analysis of Maryland Automotive Industry under guidance from Dean of School of Business & Technology, Dr Jared Burns</p>
+              <p><br />Maryland Automotive Industry Research Project</p>
+              <p><br />Captain of Seton Hill University Men's Soccer Program</p>
+              <p><br />Head Resident Assistant at Seton Hill University</p>
+
+
             </div>
             <div class="details-container">
               <img
@@ -98,18 +102,23 @@
               />
               <h3>Education</h3>
               <p>&nbsp;&nbsp;&nbsp;&nbsp;</p>
-              <p>Bachelor of Science-Junior Year<br />Majoring in Data Science</p>
+              <p>Bachelor of Science major in Data Science</p>
+              <p>Class of 2025 | GPA: 3.68</p>
               <p>&nbsp;&nbsp;&nbsp;&nbsp;</p>
               
-              <p>High School Graduate from Peninsula Grammar School<br />Australian Tertiary Admission Rank of 87.75</p>
+              <p>High School Graduate from Peninsula Grammar School<br />Class of 2020 | Australian Tertiary Admission Rank of 87.75</p>
             </div>
           </div>
           <div class="text-container">
             <p>
               I moved to the United States from Australia at the age of 18 to pursue a lifelong dream of combining my footballing abilities & commitment to excellence in the classroom.
               Initially I began with general studies at Eastern Florida State College for one semester. However, driven by a desire to further explore my academic interests, I sought out new opportunities at Seton Hill University.
-              I have been able to dive deep into the intersection of mathematics, computer science through their Data Science major alongside the seemingly unlimited resources for self-learning.
-              My childhood fascination with maths, computers and space exploration continues to drive my ambition to make meaningful contribution to these fields, empowering others through innovation and discovery.
+              As a Data Science major student at Seton Hill University, I have been immersed in a program
+              that explores the intersection of mathematics, computer science and business, to extract
+              meaningful insights from the world’s datasphere. Seton Hill’s concentration on a science and
+              mathematics-based Data Science major whilst fostering the structural foundation of a liberal
+              arts curriculum, has provided me with a unique opportunity to tackle complex issues with
+              agility and creativity. My childhood fascination with maths, computers and space exploration continues to drive my ambition to make meaningful contribution to these fields.
             </p>
           </div>
         </div>
@@ -136,8 +145,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Time Series Analysis</h3>
-                  <p>Experienced</p>
+                  <h3>Time Series Analysis Forecasting</h3>
                 </div>
               </article>
               <article>
@@ -147,8 +155,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Regression Analysis</h3>
-                  <p>Basic</p>
+                  <h3>Data Visualisations</h3>
                 </div>
               </article>
               <article>
@@ -158,8 +165,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Forecasting</h3>
-                  <p>Intermediate</p>
+                  <h3>SQL Querying</h3>
                 </div>
               </article>
               <article>
@@ -169,8 +175,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Data Visualisation</h3>
-                  <p>Experienced</p>
+                  <h3>Machine Learning Models</h3>
                 </div>
               </article>
               <article>
@@ -180,8 +185,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Deep Learning</h3>
-                  <p>Beginner</p>
+                  <h3>Multivariate Analysis</h3>
                 </div>
               </article>
               <article>
@@ -191,8 +195,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Data Cleaning & Preprocessing (SQL)</h3>
-                  <p>Intermediate</p>
+                  <h3>Neural Networks</h3>
                 </div>
               </article>
             </div>
@@ -208,7 +211,6 @@
                 />
                 <div>
                   <h3>Python</h3>
-                  <p>Experienced</p>
                 </div>
               </article>
               <article>
@@ -219,7 +221,6 @@
                 />
                 <div>
                   <h3>R</h3>
-                  <p>Intermediate</p>
                 </div>
               </article>
               <article>
@@ -230,7 +231,16 @@
                 />
                 <div>
                   <h3>SQL</h3>
-                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Orange</h3>
                 </div>
               </article>
               <article>
@@ -241,7 +251,6 @@
                 />
                 <div>
                   <h3>Git</h3>
-                  <p>Intermediate</p>
                 </div>
               </article>
             </div>
@@ -303,7 +312,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/bennicholson2/Stack_Overflow_2023_Survey_Analysis'"
+                onclick="location.href='https://github.com/bennicholson2/Stack-Overflow-Survey-Analysis-2023'"
               >
                 Github
               </button>
@@ -326,18 +335,18 @@
             </div>
             <p>&nbsp;&nbsp;&nbsp;&nbsp;</p>
             <p>&nbsp;&nbsp;&nbsp;&nbsp;</p>
-            <h2 class="experience-sub-title project-title">Interpolation Mathematical Modeling</h2>
+            <h2 class="experience-sub-title project-title">Time Series Forecasting</h2>
             <p>&nbsp;&nbsp;&nbsp;&nbsp;</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/bennicholson2/Interpolation-Project'"
+                onclick="location.href='https://github.com/bennicholson2/Forecasting-ARIMA-Time-Series-Analysis'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="window.open('./assets/Mathematical Modeling Project 2-compressed.pdf')"
+                onclick="window.open('/Users/ben_nicholson/Visual_Code_Projects/Personal_Projects/Website Portfolio/assets/Final Project Applied Statistics.pdf')"
               >
                 Report
               </button>
