--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="window.open('/Users/ben_nicholson/Visual_Code_Projects/Personal_Projects/Website Portfolio/assets/Final Project Applied Statistics.pdf')"
+                onclick="window.open('./assets/Final Project Applied Statistics.pdf')"
               >
                 Report
               </button>
