--- a/index.html
+++ b/index.html
@@ -88,9 +88,8 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p><br />Maryland Automotive Industry Research Project</p>
-              <p><br />Captain of Seton Hill University Men's Soccer Program</p>
-              <p><br />Head Resident Assistant at Seton Hill University</p>
+              <p><br />Data Analytics Marketing Intern - CMMB - Fall 2024</p>
+              <p><br />Self Led Financial/Economics Full Stack Data Science Project</p>
 
 
             </div>
@@ -105,8 +104,6 @@
               <p>Bachelor of Science major in Data Science</p>
               <p>Class of 2025 | GPA: 3.68</p>
               <p>&nbsp;&nbsp;&nbsp;&nbsp;</p>
-              
-              <p>High School Graduate from Peninsula Grammar School<br />Class of 2020 | Australian Tertiary Admission Rank of 87.75</p>
             </div>
           </div>
           <div class="text-container">
@@ -195,7 +192,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Neural Networks</h3>
+                  <h3>Networks</h3>
                 </div>
               </article>
             </div>
