--- a/index.html
+++ b/index.html
@@ -139,21 +139,21 @@
         <!-- Left Side: Image -->
         <div class="project-image-container" style="flex: 1; max-width: 40%;">
           <img
-            src="./assets/project-example.png"
+            src="./assets/technical-analysis.webp"
             alt="Project Example"
             style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);"
           />
           <div style="margin-top: 10px; display: flex; gap: 10px;">
             <button
               class="btn btn-color-2 project-btn"
-              onclick="location.href='https://github.com/example-project-link'"
+              onclick="location.href='https://github.com/https://github.com/bennicholson2/Reinforcement-Learning-in-AI-Driven-Portfolio-Management/settings'"
               style="width: 48%; padding: 10px;"
             >
               GitHub
             </button>
             <button
               class="btn btn-color-2 project-btn"
-              onclick="window.open('./assets/project-document.pdf')"
+              onclick="window.open('./assets/research-project-1.pdf')"
               style="width: 48%; padding: 10px;"
             >
               Paper
@@ -164,11 +164,18 @@
         <!-- Right Side: Title and Description -->
         <div class="project-details" style="flex: 2;">
           <h2 class="project-title" style="margin-top: 0; font-size: 1.8rem; color: #333;">
-            Project Title
+            Enhancing Technical Analysis with Data Science
           </h2>
           <p class="project-description" style="font-size: 1rem; line-height: 1.5; color: #555;">
-            A detailed description of the project goes here. You can mention the purpose, methodology, key findings, and significance of the research to give the viewer a clear idea of the project's impact.
-          </p>
+            Discover how data science methodologies such as parameter optimization and monte carlo simulations
+            can improve the performance of Technical Analysis (TA) techniques. 
+            Backtesting technical analysis strategies across different
+            macroeconomic cycles while utilizing sector Exchanged Traded Funds (ETFs) produces a robust
+            understanding of TA performance and economic cycles.
+            It was found that TA struggled to outperform baseline buy & hold
+            strategies in periods of strong economic growth. However it was clear that during volatile
+            economic periods, TA outperformed buy & hold strategies, upwards of 10%. 
+            </p>
         </div>
       </div>
       
@@ -431,13 +438,13 @@
         <div class="nav-links-container">
           <ul class="nav-links">
             <li><a href="#about">About</a></li>
-            <li><a href="#experience">Experience</a></li>
+            <li><a href="#research">Research</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
       </nav>
-      <p>Copyright &#169; 2024 Benjamin Nicholson. All Rights Reserved.</p>
+      <p>Copyright &#169; 2025 Benjamin Nicholson. All Rights Reserved.</p>
     </footer>
     <script src="script.js"></script>
   </body>
