--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             macroeconomic cycles while utilizing sector Exchanged Traded Funds (ETFs) produces a robust
             understanding of TA performance and economic cycles.
             It was found that TA struggled to outperform baseline buy & hold
-            strategies in periods of strong economic growth. However it was clear that during volatile
+            strategies in periods of strong economic growth. However it was clear that during vola
             economic periods, TA outperformed buy & hold strategies, upwards of 10%. 
             </p>
         </div>
@@ -357,25 +357,25 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-2.png"
+                src="./assets/prob-stats-image.png"
                 alt="Project 2"
                 class="project-img"
                 
               />
             </div>
-            <h2 class="research-sub-title project-title">2023 Stack Overflow Survey Results</h2>
+            <h2 class="research-sub-title project-title">Assessing the Predictability of Life Expectancy</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/bennicholson2/Stack-Overflow-Survey-Analysis-2023'"
+                onclick="location.href='https://github.com/JZembower/Life-Expectancy-Analysis"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="window.open('./assets/Stack Overflow 2023 Survey Analysis.pdf')"
+                onclick="window.open('./assets/probs-stats-project.pdf')"
               >
-                Abstract
+                Paper
               </button>
             </div>
           </div>
