final website edition

--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
       <div class="text-container">
 
           I moved to the United States from Australia at the age of 18 to pursue a lifelong dream of combining my footballing abilities & commitment to excellence in the classroom.
-          I was a collegiate athlete at Seton Hill University from 2021-2025 where I was captain of the Men's Soccer team while pursuing a degree in Data Science. 
+          I was a collegiate athlete at Seton Hill University from 2021-2025, where I was captain of the Men's Soccer team, while pursuing a degree in Data Science. 
           The program took an interdisciplinary approach in exploring the intersection of mathematics, computer science and statistics while fostering a liberal arts curriculum.
           In my Senior year I realized that I wanted to enter the world of Quantitative Finance and have been working towards this goal ever since.
           I am working on publishing a research paper using the results from my quantitative finance research project as part of my senior capstone project.
-          I will begin my masters degree in Fall 2025 where I look to further my research and contribute to the field of quantatitive finance, harnessing an interdisciplinary approach rooted in mathematical principles.
+          I will begin my masters degree in Fall 2025, where I look to further my research and contribute to the field of quantatitive finance, harnessing an interdisciplinary approach rooted in mathematical principles.
         </p>
         <p>
           <center><i>"The way you do one thing is the way you do everything" - Martha Beck</i></center>
