--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
           <div style="margin-top: 10px; display: flex; gap: 10px;">
             <button
               class="btn btn-color-2 project-btn"
-              onclick="location.href='https://github.com/https://github.com/bennicholson2/Reinforcement-Learning-in-AI-Driven-Portfolio-Management/settings'"
+              onclick="location.href='https://github.com/bennicholson2/Enhancing-Technical-Analysis-with-Data-Science'"
               style="width: 48%; padding: 10px;"
             >
               GitHub
