website UHI updates

--- a/index.html
+++ b/index.html
@@ -119,10 +119,12 @@
               />
               <h3>Education</h3>
               <p>&nbsp;&nbsp;&nbsp;&nbsp;</p>
+              <p>Seton Hill University</p>
               <p>Bachelor of Science major in Data Science</p>
               <p>Class of 2025 | GPA: 3.70</p>
               <p>&nbsp;&nbsp;&nbsp;&nbsp;</p>
-              <p>Masters of Applied Mathematics</p>
+              <p>Stony Brook University</p>
+              <p>Master's of Applied Mathematics and Statistics</p>
               <p>Starting Fall 2025</p>
             </div>
           </div>
@@ -147,7 +149,7 @@
           <div style="margin-top: 10px; display: flex; gap: 10px;">
             <button
               class="btn btn-color-2 project-btn"
-              onclick="location.href='https://github.com/bennicholson2/Enhancing-Technical-Analysis-with-Data-Science'"
+              onclick="location.href='https://github.com/bennicholson2/Urban-Heat-Island-Prediction'"
               style="width: 48%; padding: 10px;"
             >
               GitHub
