june summer 2025 update

--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p><br />Data Analytics Marketing Intern - CMMB</p>
+              <p><br />Data Analyst Marketing - CMMB</p>
 
-
+              <p><br />Student Affairs Data Analyst - CMMB</p>
             </div>
             <div class="details-container">
               <img
@@ -120,12 +120,12 @@
               <h3>Education</h3>
               <p>&nbsp;&nbsp;&nbsp;&nbsp;</p>
               <p>Seton Hill University</p>
-              <p>Bachelor of Science major in Data Science</p>
+              <p>Bachelor of Science in Data Science</p>
               <p>Class of 2025 | GPA: 3.70</p>
               <p>&nbsp;&nbsp;&nbsp;&nbsp;</p>
               <p>Stony Brook University</p>
-              <p>Master's of Applied Mathematics and Statistics</p>
-              <p>Starting Fall 2025</p>
+              <p>Master's of Applied Mathematics and Statistics concentrating in Quantitative Finance</p>
+              <p>December 2026</p>
             </div>
           </div>
           
@@ -174,7 +174,7 @@
             <br>
             <br>
             Jonah Zembower and I took on the task of building a regression model through a variety of open data sources such as NYC Open Data and Satellite Imagery to build a predictive Machine Learning Algorithm.
-            Through rigorous evaluation of various machine learning algorithms and hyperparameter optimization, we built a robust model capable of predicting urban temperatures with a 0.93 R² score. 
+            Through rigorous evaluation of various machine learning algorithms and hyperparameter optimization, we built a robust model capable of predicting urban temperatures with a 0.9606 R² score. 
             <br>
             <br>
             This research not only highlights the potential of AI-driven urban climate analysis but also provides a foundation for city planners and policymakers to implement targeted heat mitigation strategies.
